refactor(java): route private field access through accessors